[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8", 
    "wheel",
    "Cython>=0.29.0",
    "cysignals",
    "numpy>=1.19.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "g6k-gpu-tensor"
description = "G6K GPU Tensor - Advanced Lattice Sieving on GPUs with Tensor Cores"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "Léo Ducas, Marc Stevens, Wessel van Woerden"},
    {email = "l.ducas@cwi.nl"}
]
keywords = ["lattice", "cryptography", "gpu", "tensor-cores", "sieving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Programming Language :: Cython",
]
dependencies = [
    "Cython>=0.29.0",
    "cysignals", 
    "numpy>=1.19.0",
    "scipy",
    "fpylll",
    "begins",
    "requests",
    "multiprocessing-logging",
    # Note: fplll is installed automatically by setup.py if needed
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest", 
    "ipython",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/cxzhong/G6K-GPU-Tensor"
Repository = "https://github.com/cxzhong/G6K-GPU-Tensor"
Documentation = "https://github.com/cxzhong/G6K-GPU-Tensor/blob/dev/README.rst"
"Bug Reports" = "https://github.com/cxzhong/G6K-GPU-Tensor/issues"

[tool.setuptools]
packages = ["g6k"]
include-package-data = true

[tool.setuptools.package-data]
g6k = ["*.pxd", "*.pyx"]

[tool.setuptools_scm]
write_to = "g6k/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.cython-lint]
max-line-length = 120



